// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render empty page, if no item was passed 1`] = `
<div
  className="container text-center"
>
  Opps! Nothing!
</div>
`;

exports[`render right tree structure when passed items 1`] = `
<div
  className="w-full h-full relative overflow-hidden"
>
  <div
    className="w-full h-full relative overflow-hidden"
  >
    <div
      className="w-full h-full carousel-card hidden active"
    >
      <div
        style={
          Object {
            "backgroundColor": "red",
          }
        }
      >
        test-0
      </div>
    </div>
    <div
      className="w-full h-full carousel-card hidden next"
    >
      <div
        style={
          Object {
            "backgroundColor": "red",
          }
        }
      >
        test-1
      </div>
    </div>
    <div
      className="w-full h-full carousel-card hidden next"
    >
      <div
        style={
          Object {
            "backgroundColor": "red",
          }
        }
      >
        test-2
      </div>
    </div>
  </div>
</div>
`;

exports[`render right tree structure when passed items 2`] = `
<div
  className="w-full h-full relative overflow-hidden"
>
  <div
    className="w-full h-full relative overflow-hidden"
  >
    <div
      className="w-full h-full carousel-card hidden active"
    >
      <div
        style={
          Object {
            "backgroundColor": "red",
          }
        }
      >
        test-0
      </div>
    </div>
    <div
      className="w-full h-full carousel-card hidden next"
    >
      <div
        style={
          Object {
            "backgroundColor": "red",
          }
        }
      >
        test-1
      </div>
    </div>
    <div
      className="w-full h-full carousel-card hidden next"
    >
      <div
        style={
          Object {
            "backgroundColor": "red",
          }
        }
      >
        test-2
      </div>
    </div>
  </div>
  <div
    className="indicators flex flex-row items-center absolute p-1"
  >
    <div
      className="m-1 w-14 h-0.5 bg-gray-400"
    >
      <div
        className="h-full indicator-inner bg-gray-50 w-full"
        style={
          Object {
            "transitionDuration": "0",
          }
        }
      />
    </div>
    <div
      className="m-1 w-14 h-0.5 bg-gray-400"
    >
      <div
        className="h-full indicator-inner w-0"
        style={
          Object {
            "transitionDuration": "0",
          }
        }
      />
    </div>
    <div
      className="m-1 w-14 h-0.5 bg-gray-400"
    >
      <div
        className="h-full indicator-inner w-0"
        style={
          Object {
            "transitionDuration": "0",
          }
        }
      />
    </div>
  </div>
</div>
`;
